--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -20,6 +20,7 @@ jurisdiction: 'http://unstats.un.org/unsd/methods/m49/m49.htm#001'
 parameters:  # see https://confluence.hl7.org/display/FHIR/Implementation+Guide+Parameters
   path-resource:
     - fsh-generated/resources
+    - input/examples
 #  path-pages:
 #    - input/pagecontent
 #    - fsh-generated/includes
