--- a/ig.ini
+++ b/ig.ini
@@ -1,5 +1,5 @@
 [IG]
 ig = fsh-generated/resources/ImplementationGuide-johnmoehrke.testmed.example.json
-#template = fhir.base.template#current
+template = fhir.base.template#current
 #template = ihe.fhir.template
-template = moehrke-research
+#template = moehrke-research
