--- a/ig.ini
+++ b/ig.ini
@@ -1,5 +1,6 @@
 [IG]
 ig = fsh-generated/resources/ImplementationGuide-johnmoehrke.testmed.example.json
-template = fhir.base.template#current
+#template = hl7.fhir.template#current
+#template = fhir.base.template#current
 #template = ihe.fhir.template
-#template = moehrke-research
+template = moehrke-research
